--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+Brotli==1.0.9
 Django==4.1.7
 django-environ==0.10.0
 djangorestframework==3.14.0
@@ -6,3 +7,4 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.5
 pytz==2022.7.1
 sqlparse==0.4.3
+whitenoise==6.4.0
