--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 Brotli==1.0.9
 Django==4.1.7
 django-environ==0.10.0
+django-jquery==3.1.0
 djangorestframework==3.14.0
 gunicorn==20.1.0
 psycopg2-binary==2.9.5
