--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 Brotli==1.0.9
 Django==4.1.7
+django-cors-headers==3.14.0
 django-environ==0.10.0
 django-jquery==3.1.0
 djangorestframework==3.14.0
